--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "prettier": "2.8.7"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
